# Chinatown

./: .gitignore  README.md  pyproject.toml
reports/: action_varied_viscosity_baseline.md
scripts/: analyze_viscosity_training.py  create_blocked_viscosity_split.py  generate_viscosity_action_dataset.py  generate_viscosity_belief_random_actions.py  generate_viscosity_dataset.py  prepare_viscosity_dataset.py  render_action_variants_single_viscosity.py  render_same_action_viscosity_triplet.py  run_robotic_arm_pour_viscosity_genesis.py  train_viscosity_contrastive.py
src/chinatown/: __init__.py  pouring_control_env.py  robotic_arm_pour_genesis.py
src/chinatown_learning/: __init__.py  dataset.py  model.py
tests/: test_pouring_control_env.py  test_robotic_arm_pour_genesis_smoke.py  test_viscosity_belief_generator.py
